# plmol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api_reference.md  complex.md  feature_types.md  hierarchical_featurizer.md  ligand.md  molecule_descriptors.md  molecule_feature.md  protein.md  protein_atom_feature.md  protein_residue_feature.md
examples/: check_graph_dims.py  ligand_views_demo.py  protein_ligand_demo.py  usage_example.ipynb
plfeature/: __init__.py
plfeature/constants/: __init__.py  amino_acids.py
plfeature/molecule_featurizer/: graph_featurizer.py  molecule_feature.py
plfeature/protein_featurizer/: atom_featurizer.py  esm_featurizer.py  hierarchical_featurizer.py  pdb_standardizer.py  pdb_utils.py  residue_featurizer.py
plmol/: __init__.py  base.py  cache.py  complex.py  errors.py  specs.py  utils.py
plmol/cli/: __init__.py  batch_ligand_featurize.py  batch_protein_featurize.py
plmol/constants/: __init__.py  amino_acids.py  elements.py  interactions.py  physical_properties.py  runtime.py  smarts_patterns.py
plmol/featurizers/: __init__.py  surface.py  voxel.py
plmol/interaction/: __init__.py  pli_featurizer.py  pocket_extractor.py
plmol/io/: __init__.py  loaders.py
plmol/kernels/: __init__.py  surface.py
plmol/ligand/: __init__.py  base.py  core.py  descriptors.py  featurizer.py  fragment.py  graph.py
plmol/protein/: __init__.py  atom_featurizer.py  backbone_featurizer.py  core.py  esm_featurizer.py  geometry.py  hierarchical_featurizer.py  pdb_standardizer.py  protein_featurizer.py  residue_featurizer.py  utils.py
plmol/surface/: __init__.py  features.py
plmol/surface/featurizer/: __init__.py  surface_features.py
plmol/voxel/: __init__.py  features.py  voxel_features.py
scripts/: batch_ligand_featurize.py  batch_protein_featurize.py
tests/: conftest.py  test_atom_featurizer.py  test_backbone_featurizer.py  test_base.py  test_cache.py  test_complex.py  test_complex_extended.py  test_geometry.py  test_interaction.py  test_io_loaders.py  test_ligand_core.py  test_ligand_descriptors.py  test_ligand_featurizer.py  test_ligand_fragment.py  test_ligand_graph.py  test_pdb_standardizer.py  test_protein_core.py  test_protein_featurizer.py  test_protein_utils.py  test_residue_featurizer.py  test_specs.py  test_surface.py  test_utils.py
