[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plmol"
version = "0.2.1"
description = "Unified molecular and protein feature extraction for protein-ligand modeling"
readme = { text = "plmol: unified molecular and protein feature extraction toolkit.", content-type = "text/plain" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jaemin Sim", email = "your.email@example.com" }
]
keywords = [
  "protein-ligand",
  "ligand",
  "pdb",
  "smiles",
  "feature-extraction",
  "bioinformatics",
  "chemistry",
  "machine-learning",
  "drug-discovery",
  "gnn"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch>=1.9.0",
  "numpy>=1.19.0",
  "pandas>=1.3.0",
  "rdkit>=2020.09.1",
  "freesasa>=2.1.0",
  "scipy>=1.8.0"
]

[project.optional-dependencies]
surface = [
  "open3d",
  "scikit-image",
  "trimesh"
]
dev = [
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/eightmm/plmol"
Repository = "https://github.com/eightmm/plmol"
Issues = "https://github.com/eightmm/plmol/issues"

[project.scripts]
plmol-batch-protein-featurize = "plmol.cli.batch_protein_featurize:main"
plmol-batch-ligand-featurize = "plmol.cli.batch_ligand_featurize:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["plmol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["plmol"]
omit = [
    "plmol/cli/*",
    "plmol/surface/features.py",
    "plmol/voxel/features.py",
    "plmol/protein/esm_featurizer.py",
    "plmol/protein/hierarchical_featurizer.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise ImportError",
]
